// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExampleCard should display correctly as a table card 1`] = `
<div
  className="md-paper md-paper--1 md-card md-card--table md-background--card md-cell md-cell--12"
  id="table-example"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
>
  <div
    className="md-card-title md-card-title--primary quick-link"
    style={undefined}
  >
    <h2
      className="md-card-title--title md-card-title--large md-text"
      id={undefined}
    >
      <div
        className="quick-link__container"
      >
        Table Example
        <a
          className="quick-link__link quick-link__link--title"
          href="#table-example"
          onClick={[Function]}
        >
          <i
            className="md-icon material-icons"
            style={undefined}
          >
            link
          </i>
        </a>
      </div>
    </h2>
    <button
      className="md-btn md-btn--icon md-pointer--hover md-inline-block md-collapser md-collapser--card"
      disabled={undefined}
      href={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <svg
        aria-labelledby={null}
        className="md-icon md-text--inherit"
        focusable={false}
        role="img"
        style={undefined}
        title={undefined}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
  <table
    className="md-data-table"
  >
    <thead
      className="md-table-header"
    >
      <tr
        className="md-table-row"
      >
        <th
          className="md-table-column md-table-column--header"
        >
          Hello!
        </th>
      </tr>
    </thead>
    <tbody
      className="md-table-body"
    >
      <tr
        className="md-table-row"
      >
        <td
          className="md-table-column md-table-column--header"
        >
          Hello!
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExampleCard should display correctly as a table card 2`] = `
<div
  className="md-paper md-paper--1 md-card md-card--table md-background--card md-cell md-cell--12"
  id="table-example"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
>
  <div
    className="md-card-title md-card-title--primary quick-link"
    style={undefined}
  >
    <h2
      className="md-card-title--title md-card-title--large md-text"
      id={undefined}
    >
      <div
        className="quick-link__container"
      >
        Table Example
        <a
          className="quick-link__link quick-link__link--title"
          href="#table-example"
          onClick={[Function]}
        >
          <i
            className="md-icon material-icons"
            style={undefined}
          >
            link
          </i>
        </a>
      </div>
    </h2>
    <button
      className="md-btn md-btn--icon md-pointer--hover md-inline-block md-collapser md-collapser--card"
      disabled={undefined}
      href={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <svg
        aria-labelledby={null}
        className="md-icon md-text--inherit"
        focusable={false}
        role="img"
        style={undefined}
        title={undefined}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
  <section
    className="md-card-text"
  >
    <div
      className="markdown-container md-text-container examples-page__card__description"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Some <strong>description</strong> <em>markdown</em></p>
        ",
        }
      }
    />
  </section>
  <table
    className="md-data-table"
  >
    <thead
      className="md-table-header"
    >
      <tr
        className="md-table-row"
      >
        <th
          className="md-table-column md-table-column--header"
        >
          Hello!
        </th>
      </tr>
    </thead>
    <tbody
      className="md-table-body"
    >
      <tr
        className="md-table-row"
      >
        <td
          className="md-table-column md-table-column--header"
        >
          Hello!
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExampleCard should display correctly with a description 1`] = `
<div
  className="md-paper md-paper--1 md-card md-background--card md-cell md-cell--12"
  id="second-example"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
>
  <div
    className="md-card-title md-card-title--primary quick-link"
    style={undefined}
  >
    <h2
      className="md-card-title--title md-card-title--large md-text"
      id={undefined}
    >
      <div
        className="quick-link__container"
      >
        Second Example
        <a
          className="quick-link__link quick-link__link--title"
          href="#second-example"
          onClick={[Function]}
        >
          <i
            className="md-icon material-icons"
            style={undefined}
          >
            link
          </i>
        </a>
      </div>
    </h2>
    <button
      className="md-btn md-btn--icon md-pointer--hover md-inline-block md-collapser md-collapser--card"
      disabled={undefined}
      href={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <svg
        aria-labelledby={null}
        className="md-icon md-text--inherit"
        focusable={false}
        role="img"
        style={undefined}
        title={undefined}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
  <section
    className="md-card-text"
  >
    <div
      className="markdown-container md-text-container examples-page__card__description"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<pre><code># Second Example
        That contains some markdown!
        
        - one
        - two
        - three
        
        &gt; some note
        </code></pre>",
        }
      }
    />
    <h1>
      Hello, World!
    </h1>
    <div>
      This should have some content...
    </div>
  </section>
</div>
`;

exports[`ExampleCard should display correctly without a description 1`] = `
<div
  className="md-paper md-paper--1 md-card md-background--card md-cell md-cell--12"
  id="first-example"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
>
  <div
    className="md-card-title md-card-title--primary quick-link"
    style={undefined}
  >
    <h2
      className="md-card-title--title md-card-title--large md-text"
      id={undefined}
    >
      <div
        className="quick-link__container"
      >
        First Example
        <a
          className="quick-link__link quick-link__link--title"
          href="#first-example"
          onClick={[Function]}
        >
          <i
            className="md-icon material-icons"
            style={undefined}
          >
            link
          </i>
        </a>
      </div>
    </h2>
    <button
      className="md-btn md-btn--icon md-pointer--hover md-inline-block md-collapser md-collapser--card"
      disabled={undefined}
      href={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <svg
        aria-labelledby={null}
        className="md-icon md-text--inherit"
        focusable={false}
        role="img"
        style={undefined}
        title={undefined}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
  <section
    className="md-card-text"
  >
    <div />
  </section>
</div>
`;
